6709457: (fc) lock/tryLock() throws IOException "Access is denied" when file opened for append [win]

Reviewed-by: chegar